--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   "author": "Severino Carvalho <severinocarvalho14@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "tailwindcss": "^3.2.4"
   },
   "homepage": "https://severino-carvalho.github.io/portfolio"
 }
